--- a/EV3/EV3Unity/Assembly-CSharp.csproj
+++ b/EV3/EV3Unity/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\ReneB_script1.cs" />
+     <Compile Include="Assets\VisionClient.cs" />
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>/Users/reneb/Git/GitHub/UnityRobot/EV3/EV3Unity/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
