Added JSON serializing and deserializing with json.net

--- a/EV3/EV3Unity/Assembly-CSharp.csproj
+++ b/EV3/EV3Unity/Assembly-CSharp.csproj
@@ -98,6 +98,9 @@
  <Reference Include="UnityEngine.StandardEvents">
  <HintPath>/Users/reneb/Library/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
  </Reference>
+ <Reference Include="Newtonsoft.Json.Net20">
+ <HintPath>/Users/reneb/Git/GitHub/UnityRobot/EV3/EV3Unity/Assets/Newtonsoft.Json.Net20.dll</HintPath>
+ </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
